tests/golden/type_errors/range_bad_argument.err
Type error at 1:17: range expects number as first argument, got string
  range("start", 3);
                  ^
